# modular-greenhouse-system

./: .gitignore  .vercelignore  00_README_FOR_JOSH.md  Common_Components_Strategy.md  Configuration_Engine.py  Daily_Production_Planner.py  Inventory_Tracker.py  Josh_Backend_Management_UI.html  Josh_Self_Running_Greenhouse_System_v1.0.py  Master_Reference_Guide_v1.0.md  Modular_Greenhouses_Sales_Spec_Sheet.md  README.md  Visual_Component_Catalog.md  Weekly_Production_Capacity.md  download-site-images.bat  index.py  pyproject.toml  requirements.txt  vercel.json
Final_Deliverables/: Josh_Backend_Management_UI.html  Josh_Self_Running_Greenhouse_System_v1.0.py
api/: __init__.py  advisor.py  app.py  audit.py  auth.py  automations.py  billing.py  calendly_actions.py  calendly_client.py  catalog_store.py  checkout.py  copacker.py  copilot.py  db.py  email_service.py  engine_bridge.py  growth.py  help_content.py  integrations_providers.py  inventory_store.py  models_db.py  quickbooks_client.py  quickbooks_sync.py  schemas.py  security.py  stripe_client.py  walkthrough_content.py
data/: catalog.json
docs/: SYSTEM_OVERVIEW.md  WALKTHROUGH.md  engineering_data.md
greenhouse/: __init__.py  catalog.py  cli.py  configurator.py  engineering.py  models.py  quote.py
production/: __init__.py  materials.py  planner.py  shipping.py
scripts/: download_site_images.py  gen_walkthrough_doc.py  run.sh  scrape_site.py
tests/: test_advisor.py  test_api.py  test_auth.py  test_billing.py  test_calendly.py  test_checkout.py  test_configurator.py  test_copilot.py  test_email.py  (+18 more)
(+43 files in other folders)
