[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "modular-greenhouse-system"
version = "0.1.0"
description = "Configuration, BOM, quoting, and engineering-triage engine for Modular Greenhouses"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# The pure engine + CLI need nothing. The web suite needs these:
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "pydantic>=2",
  "httpx>=0.27",
  "cryptography>=42",
  "python-multipart",
]

[project.scripts]
greenhouse = "greenhouse.cli:main"

[tool.setuptools.packages.find]
include = ["greenhouse*", "production*", "api*"]
